// Use DBML to define your database structure
// Docs: https://dbml.dbdiagram.io/docs

Table users {
  user_id int [pk, increment]
  name varchar [not null]
  email varchar [unique, not null]
  password varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table posts {
  post_id int [pk, increment]
  title varchar [not null]
  description text [not null]
  user_id int [ not null]
  category_id int [ not null]
  created_at timestamp
  updated_at timestamp
}

Table categories {
  category_id int [pk, increment]
  name varchar [not null]
  created_at timestamp
  updated_at timestamp
}

Table comments {
  comment_id int [pk, increment]
  name varchar [not null]
  description text [not null]
  post_id int [ not null]
  created_at timestamp
  updated_at timestamp
}

Ref: posts.user_id > users.user_id
Ref: posts.category_id > categories.category_id
Ref: comments.post_id > posts.post_id
